Remove login with username (#3)
* Add JWT authentication

* REMOVE unused dto, ADD cors config

* Update CORS config

* remove login with username, format code